--- a/package.json
+++ b/package.json
@@ -22,5 +22,20 @@
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.1.3"
-  }
+  },
+  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+  "main": "postcss.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/appsetor/appsetor-oss.git"
+  },
+  "keywords": [
+    "appsetor-oss"
+  ],
+  "author": "appsetor",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/appsetor/appsetor-oss/issues"
+  },
+  "homepage": "https://github.com/appsetor/appsetor-oss#readme"
 }
